# Dasboard_KFC

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  aggregation.py  config.py  constants.py  database.py  main.py  models.py  mundial.py  mundial_service.py  rate_limit.py  security.py  service.py  windsor.py
tests/: conftest.py  test_aggregation.py  test_auth_dashboard.py  test_mundial_aggregation.py  test_mundial_public_endpoint.py  test_mundial_service.py  test_normalization.py  test_public_endpoint.py  test_snapshot_fallback.py  test_windsor_errors.py
