[project]
name = "kfc-app-installs-backend"
version = "0.1.0"
description = "Backend for the MKP One KFC app installs dashboard."
requires-python = ">=3.9"
dependencies = [
    "apscheduler>=3.10,<4",
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "psycopg[binary]>=3.2,<4",
    "PyMySQL>=1.1,<2",
    "pydantic-settings>=2.4,<3",
    "PyJWT[crypto]>=2.9,<3",
    "SQLAlchemy>=2.0,<3",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
